React to QAbstractItemModel::modelReset() signal.

Task-number: QTBUG-8494