src/declarative/graphicsitems/qdeclarativelistview.cpp
@@ -1477,6 +1477,7 @@ void QDeclarativeListView::setModel(const QVariant &model)
         disconnect(d->model, SIGNAL(itemsInserted(int,int)), this, SLOT(itemsInserted(int,int)));
         disconnect(d->model, SIGNAL(itemsRemoved(int,int)), this, SLOT(itemsRemoved(int,int)));
         disconnect(d->model, SIGNAL(itemsMoved(int,int,int)), this, SLOT(itemsMoved(int,int,int)));
+        disconnect(d->model, SIGNAL(modelReset()), this, SLOT(modelReset()));
         disconnect(d->model, SIGNAL(createdItem(int, QDeclarativeItem*)), this, SLOT(createdItem(int,QDeclarativeItem*)));
         disconnect(d->model, SIGNAL(destroyingItem(QDeclarativeItem*)), this, SLOT(destroyingItem(QDeclarativeItem*)));
     }
@@ -1511,6 +1512,7 @@ void QDeclarativeListView::setModel(const QVariant &model)
         connect(d->model, SIGNAL(itemsInserted(int,int)), this, SLOT(itemsInserted(int,int)));
         connect(d->model, SIGNAL(itemsRemoved(int,int)), this, SLOT(itemsRemoved(int,int)));
         connect(d->model, SIGNAL(itemsMoved(int,int,int)), this, SLOT(itemsMoved(int,int,int)));
+        connect(d->model, SIGNAL(modelReset()), this, SLOT(modelReset()));
         connect(d->model, SIGNAL(createdItem(int, QDeclarativeItem*)), this, SLOT(createdItem(int,QDeclarativeItem*)));
         connect(d->model, SIGNAL(destroyingItem(QDeclarativeItem*)), this, SLOT(destroyingItem(QDeclarativeItem*)));
         emit countChanged();
@@ -2682,6 +2684,16 @@ void QDeclarativeListView::itemsMoved(int from, int to, int count)
     d->visibleItems.first()->setPosition(d->visibleItems.first()->position() + moveBy);
 
     d->layout();
+}
+
+void QDeclarativeListView::modelReset()
+{
+    Q_D(QDeclarativeListView);
+    d->clear();
+    refill();
+    d->moveReason = QDeclarativeListViewPrivate::SetIndex;
+    d->updateCurrent(d->currentIndex);
+    emit countChanged();
 }
 
 void QDeclarativeListView::createdItem(int index, QDeclarativeItem *item)
